<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical"
        android:background="@drawable/shap_dialog">

        <TextView
            android:id="@+id/delete_tips_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wish_photo_album_confirm_delete_img_text"
            android:gravity="center"
            android:drawablePadding="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <Button
            android:id="@+id/delete_select_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wish_photo_album_delete_text"
            android:textSize="16sp"
            android:textColor="@color/caveat_color"
            android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>

    <Button
        android:id="@+id/cancel_delete"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/select_list"
        android:text="@string/wish_page_select_cancel_text"
        android:textColor="@color/white"
        android:background="@drawable/photo_select_shape"
        android:textAllCaps="false"
        android:textSize="16sp"/>
</LinearLayout>